<?xml version="1.0" encoding="utf-8" ?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center_vertical" android:paddingTop="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
	<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0">
		<EditText android:id="@id/ai_txt_name" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/hint_itemName" android:singleLine="true" android:inputType="text" />
		<TextView android:id="@id/ai_txt_number" android:background="@android:color/transparent" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@android:style/Widget.EditText" />
	</LinearLayout>
	<ImageButton android:id="@id/ai_btn_pin" android:layout_width="@dimen/button_width" android:layout_height="@dimen/button_width" android:src="@drawable/pin" android:scaleType="fitCenter" android:contentDescription="@string/cntDesc_togglepin" />
	<ImageButton android:id="@id/ai_btn_delete" android:layout_width="@dimen/button_width" android:layout_height="@dimen/button_width" android:src="@android:drawable/ic_menu_delete" android:contentDescription="@string/cntDesc_delete" />
</LinearLayout>
